# ai-ru-text-checker

./: .env.example  .gitignore  Makefile  SPEC.md  docker-compose.dev.yml  docker-compose.yml
core/: .dockerignore  .env.example  .gitignore  Dockerfile  package.json  tsconfig.json
core/src/: index.ts
core/src/application/: index.ts
core/src/application/ports/: index.ts  job.repository.ts  llm.client.ts  search.client.ts  spellcheck.client.ts  user.repository.ts  worker.client.ts
core/src/application/services/: chunk.service.ts
core/src/application/use-cases/: index.ts
core/src/config/: index.ts  llm.config.ts  redis.config.ts  server.config.ts  telegram.config.ts  worker.config.ts
core/src/domain/entities/: index.ts  job.entity.ts  user.entity.ts
core/src/infrastructure/http/: server.ts
core/src/infrastructure/llm/: index.ts  openai.client.ts
core/src/infrastructure/mcp/: index.ts  search.client.impl.ts
core/src/infrastructure/search/: brave-search.client.ts  index.ts  searxng.client.ts  unified-search.client.ts
core/src/infrastructure/spellcheck/: composite-spellcheck.client.ts  hunspell-yandex.client.ts  index.ts  languagetool.client.ts  (+1 more)
searxng/: settings.yml
worker/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  requirements.txt
worker/app/: main.py
worker/app/api/: routes.py
worker/app/core/: config.py
worker/app/models/: __init__.py  requests.py  responses.py
worker/app/services/: __init__.py  diff_service.py  parser_service.py
worker/tests/: test_api.py  test_diff_service.py  test_parser_service.py
(+27 files in other folders)
